--- a/public/css/style.css
+++ b/public/css/style.css
@@ -190,6 +190,13 @@
     padding: 13px 16px;
     font-size: 24px;
   }
+
+  .iconesFundo {
+    display: flex;
+  }
+  .coracao ion-icon {
+    color:  red;
+  }
   
   .post .fundo .acoes div:first-child ion-icon {
     margin-right: 6px;
